--- a/notes/destrezas.tex
+++ b/notes/destrezas.tex
@@ -4,72 +4,41 @@
 \section{Destrezas del Analista de Datos}
 El analista de datos tiene dos funciones principales: analizar los datos en si, y presentar los resultados de forma efectiva
 
-\subsection{Habilidades Analíticas}
-Cualidades y características asociadas con la resolución de problemas usando hechos
-\begin{description}
-    \item[Curiosidad]: Querer aprender algo
-    \item[Entender \gls{cntxt}]
-    \item[\gls{strctrdthnkng}]
-    \item[Diseño de Datos]: Organización de la información por formatos, tipos o almacenamientos
-    \item[Estrategia de datos]: Gestión de la gente, procesos y herramientas usadas en el Análisis de Datos
-\end{description}
-
 \subsection{Pensamiento Analítico}
-Identificar y definir un problema, para luego resolverlo usando datos de forma organizada, paso a paso. Presenta 5 aspectos principales:
-\begin{description}
-    \item[Visualización]: Representación gráfica de la información
-    \item[Ser Estratégico]: Crear planes para resolver un problema dado ciertos datos, manteniendo el enfoque, calidad y utilidad
-    \item[Pensamiento Orientado a Problemas]: Identificar problema, y mantenerlo como motor principal del proyecto completo
-    \item[Correlación]: Relación entre dos variables. \textit{Correlación ${\neq}$ causalidad}
+Notar la diferencia entre pensamiento y \textbf{Habilidades Analíticas}: cualidades y características asociadas con la resolución de problemas usando hechos,  como ser \textbf{curioso}, entender el \gls{cntxt} de la información y practicar \gls{strctrdthnkng}
+
+El \textbf{Pensamiento} es el proceso de identificar y definir un problema, para luego resolverlo usando datos de forma organizada, paso a paso. Presenta 5 aspectos principales:
+\begin{itemize}
+    \item{\textbf{Visualización}: Representación gráfica de la información}
+    \item{\textbf{Ser Estratégico}: Crear planes para resolver un problema dado ciertos datos, manteniendo el enfoque, calidad y utilidad}
+    \item{\textbf{Pensamiento Orientado a Problemas}: Identificar problema, y mantenerlo como motor principal del proyecto completo}
+    \item{\textbf{Correlación}: Relación entre dos variables. \textit{Correlación ${\neq}$ causalidad}}
     \item{Los siguientes aspectos debieran considerarse al mismo tiempo:
     \begin{description}
         \item[Big Picture Thinking]: Visión del panorama completo
         \item[Detail Oriented Picture]: Estudio de las partes en detalle
     \end{description}}
-\end{description}
+\end{itemize}
 
 \subsection{Reuniones y Presentaciones}
-Los aspectos más importantes de las presentaciones son: definir el propósito, mantener la presentación concisa, mantener algún tipo de flujo lógico, que sea atractivo visualmente, y que sea fácil de entender. Las habilidades de presentación se practican en cada una
-\begin{itemize}
-    \item {Controlar la emoción y los nervios}
-    \item {Comenzar con las ideas generales}
-    \item {Utilizar la regla de los cinco segundos}
-    \item {La preparación es clave}
-    \item {Se recomienda el siguiente orden de diapositivas : agenda o estructura, propósito, datos o análisis, propuesta, llamada a acción}
-    \item {Tener en cuenta que la audiencia : no siempre verá los pasos tomados para llegar a la conclusión, tienen la mente ocupada, se distrae fácilmente}
-\end{itemize}
+Los datos, y sus resultados, se comparten a través de instancias como reuniones. La presentación se debe mantener concisa, y su creación empieza por definir su \textbf{propósito}. Para que sea fácil de entender, se comienza con ideas generales, y sigue algún tipo de flujo lógico. 
 
-\paragraph{Consejos y trucos para presentar datos y resultados}
-\begin{itemize}
-    \item {Conocer la mejor forma de organizarse. audiencia? propósito?}
-    \item {Preparar puntos de conversación, limitar texto en diapositivas}
-    \item {Finalizar con recomendaciones}
-    \item {Dejar tiempo para preguntas y presentar los datos}
-    \item {Pedir opiniones al cierre}
-\end{itemize}
+Además de entender el objetivo de la presentación, es importante considerar las expectativas y deseos de los \gls{stkhldrs} para anticipar preguntas. La \textbf{audiencia} se puede distraer fácilmente, tiene la mente ocupada o no siempre verá los pasos tomados para llegar a cierta conclusión. Tampoco hay que asumir que conocen la terminología y los acrónimos, o que conocen de eventos o información previa 
 
-\paragraph{Cómo hablar}
-\begin{itemize}
-    \item {Mantener las oraciones cortas}
-    \item {Generar instancias para pausas intencionales}
-    \item {Mantener un tono de voz uniforme}
-\end{itemize}
+Es necesario que la presentación tenga un atractivo visual que capte la atención. Las visuales debieran cumplir con la regla de los cinco segundos, donde la audiencia entiende la idea principal en dicha cantidad de tiempo. Al momento de crear diapositivas, se debe limitar la cantidad de texto, y seguir un orden similar al siguiente: \textit{agenda/estructura, propósito, datos/análisis, propuesta, llamada a acción}. Tambien se puede compartir un \textbf{apéndice}: información que no está en la presentación en si, pero puede ser útil tener al alcance
 
-\paragraph{Limitar Hábitos Nerviosos}
-\begin{itemize}
-    \item {Mantenerse quieto, moverse con propósito}
-    \item {Practicar buena postura}
-    \item {Hacer contacto visual positivo}
-\end{itemize}
+La presentación necesita pausas intencionales para mostrar los datos, junto a puntos de conversación para abordar temas que aparezcan. La idea es involucrar a la audiencia al incluir otras voces como personas expertas en la materia, pero es necesario evitar que una persona desvíe la conversación. Se finaliza con recomendaciones, y se piden opiniones al cierre. 
 
-\paragraph{Anticiparse a Preguntas}
+Es necesario anticipar preguntas a través de las expectativas de los \gls{stkhldrs}. Al momento de la pregunta, se debe escuchar completa y repetir de ser necesario, porque es importante entender el contexto detrás. La respuesta debe ser corta y precisa, pero si no hay una, se debe reconocer para tomar acción e investigar al respecto
+
+De cualquier forma, es buena idea preparar un borrador como equipo, con respuestas a preguntas anticipadas. Se puede conversar con colegas y jefes para pedir comentarios o preguntas sobre la presentación o documento, como la \textbf{Prueba del Colega}: un ensayo de presentación junto a alguien que no sepa del tema, para estudiar qué preguntas, conclusiones y comentarios pueda generar. La idea es encontrar preguntas complejas o partes poco claras por seguridad
+
+
+
+
 \begin{itemize}
-    \item {Entender las expectativas de los \gls{stkhldrs}}
-    \item {Asegurarse de entender el objetivo, y lo que los \gls{stkhldrs} desean}
-    \item {Si no se entiende, las preguntas no se responderán correctamente}
-    \item {Realizar la \textbf{Prueba del colega}: ensayo de presentación junto a alguien que no sepa del tema, para ver qué preguntas, conclusiones y comentarios pueda generar}
-    \item {Empezar sin preconcepciones : no hay que asumir que la audiencia conoce la terminología, acrónimos, eventos o información previa y necesaria}
-    \item {Trabajar con el equipo para preparar un borrador con respuestas a preguntas anticipadas}
+    \item {Limitar los hábitos nerviosos y controlar la emoción. Practicar buena postura, mantenerse quieto y moverse con propósito. Hacer contacto visual positivo}
+    \item {Hablar con oraciones cortas, generar instancias para pausas intencionales, mantener un tono de voz uniforme}
 \end{itemize}
 
 \paragraph{Considerar las Limitaciones de los Datos}
@@ -77,23 +46,6 @@ Los aspectos más importantes de las presentaciones son: definir el propósito, 
     \item {Análisis crítico de las correlaciones}
     \item {Observar el \gls{cntxt}}
     \item {Comprender las fortalezas y debilidades de las herramientas}
-\end{itemize}
-
-\paragraph{Lista de Verificación para preparar Q+A}
-\textbf{Antes de la presentación}
-\begin{itemize}
-    \item {Armar y preparar preguntas}
-    \item {Conversar sobre presentaciones con colegas, gerente..., y pedir que comenten preguntas que puedan tener}
-    \item {Pedir comentarios y opiniones sobre la presentación o documento de análisis}
-    \item {Pensar en preguntas complejas o partes poco claras}
-    \item {Practicar la presentación por seguridad, por si falta algo}
-\end{itemize}
-\textbf{Durante la presentación}
-\begin{itemize}
-    \item {Prepararse para preguntas}
-    \item {Abordar cualquier tema que surja}
-    \item {Evitar que una sola persona desvíe la presentación}
-    \item {Presentar un apéndice con visualizaciones y contenido extra. \textit{apéndice : información que no está presente en la presentación en si, pero que puede ser útil al tenerla al alcance}}
 \end{itemize}
 
 \paragraph{Tipos de Objeciones}
@@ -122,13 +74,6 @@ Los aspectos más importantes de las presentaciones son: definir el propósito, 
     \item {Reconocer la validez de la objeción y tomar acción para seguir investigando}
 \end{itemize}
 
-\paragraph{Otras prácticas recomendadas}
-\begin{itemize}
-    \item {Escuchar la pregunta completa, repetirla de ser necesario}
-    \item {Entender el contexto de la pregunta}
-    \item {Involucrar a toda la audiencia, incluir a otras voces}
-    \item {Mantener respuestas cortas y precisas}
-\end{itemize}
 
 \begin{table}
     \centering
