--- a/notes/main.tex
+++ b/notes/main.tex
@@ -72,8 +72,7 @@
 
 % ======================= INICIO DEL DOCUMENTO =======================
 
-\input{class}
-\input{ciclo_datos}
+\input{datos}
 \input{destrezas}
 \input{design}
 \input{statistics}
